--- a/Stylesheet.qss
+++ b/Stylesheet.qss
@@ -1,23 +1,34 @@
 QWidget{
     background-color: #D8EAF3;
+
 }
-QWidget#box{
+QWidget#box, QWidget#box2{
     background-color: white;
+
 }
 
 QPushButton{
     color: black;
     border-color: #8DC1D8;
+    border-radius: 20;
+    border-style: outset ;
+    border-width: 3px;
+}
+
+QPushButton:hover{
+    background-color: #B2D6E6;
+}
+QPushButton:pressed{
+    border-color: #808080;
+    background-color: #8DC1D8;
 }
 
 QPushButton#playbtn{
-    max-width: 80px;
-    max-height: 80px;
+    border-radius: 22;
+    margin: 20px;
+    max-width: 40px;
+    max-height: 40px;
+    min-width: 40px;
+    min-height: 40px;
     image: url('playButton.png') ;
 }
-
-QPushButton#playbtn:hover{
-    background-color: #B2D6E6;
-}
-
-
