--- a/Stylesheet.qss
+++ b/Stylesheet.qss
@@ -32,3 +32,7 @@ QPushButton#playbtn{
     min-height: 40px;
     image: url('playButton.png') ;
 }
+QLineEdit{
+    max-width: 200px;
+    color: darkgrey;
+}
