Finally VTK and Fileinput in the app Organized OOP and change to PyQt5 for VTK integrtion

--- a/Stylesheet.qss
+++ b/Stylesheet.qss
@@ -6,6 +6,10 @@ QWidget#box, QWidget#box2{
     background-color: white;
 
 }
+QWidget#box4{
+    background-color: red;
+
+}
 
 QPushButton{
     color: black;
