--- a/Stylesheet.qss
+++ b/Stylesheet.qss
@@ -1,13 +1,12 @@
-QWidget{
+QMainWindow{
+    background-color: 999999;
+
+}
+
+QLabel{
     background-color: #D8EAF3;
-
-}
-QWidget#box, QWidget#box2{
-    background-color: white;
-
-}
-QWidget#box4{
-    background-color: red;
+    color: black;
+    font: 20px;
 
 }
 
@@ -18,6 +17,9 @@ QPushButton{
     border-style: outset ;
     border-width: 3px;
 }
+QWidget#MediaBar{
+    background-color: #D8EAF3;
+}
 
 QPushButton:hover{
     background-color: #B2D6E6;
@@ -27,15 +29,27 @@ QPushButton:pressed{
     background-color: #8DC1D8;
 }
 
-QPushButton#playbtn{
+QPushButton#playbtn, #forward, #backward{
+    background-color: #D8EAF3;
     border-radius: 22;
     margin: 20px;
     max-width: 40px;
     max-height: 40px;
     min-width: 40px;
     min-height: 40px;
+}
+QPushButton#playbtn{
     image: url('playButton.png') ;
 }
+
+QPushButton#forward{
+    image: url('forwardButton.png') ;
+}
+
+QPushButton#backward{
+    image: url('backwardButton.png') ;
+}
+
 QLineEdit{
     max-width: 200px;
     color: darkgrey;
