--- a/Stylesheet.qss
+++ b/Stylesheet.qss
@@ -2,17 +2,20 @@ QMainWindow{
     background-color: 999999;
 
 }
-
 QLabel{
     background-color: #D8EAF3;
     color: black;
-    font: 30px;
+    font: 20px;
     min-height: 100px;
 
 }
 QLabel#info{
-    min-height: 400px;
+    min-height: 600px;
     font: 20px;
+}
+
+QLabel#enterfilepath{
+    min-width : 500px;
 }
 QPushButton{
     background-color: #D8EAF3;
@@ -54,12 +57,17 @@ QPushButton#forward{
 QPushButton#backward{
     image: url('backwardButton.png') ;
 }
+QPushButton#submit{
+    border-radius: 15;
+    max-height: 40px;
+}
 
 QLineEdit{
     background-color: #D8EAF3;
-    max-width: 300px;
-    min-width: 200px;
+    max-width: 500px;
+    min-width: 300px;
     min-height: 40px;
     color: darkgrey;
     font: 20px;
 }
+
