--- a/Stylesheet.qss
+++ b/Stylesheet.qss
@@ -1,21 +1,17 @@
+/* -------- Stylesheet --------------*/
+QFrame{
+    background-color: #808080
+}
+
+/* -------- General --------------*/
 QLabel{
     background-color: #D8EAF3;
     color: black;
     font: 20px;
-    min-height: 100px;
+    min-height: 80px;
 
 }
-QToolbar#Toolbar{
-    background-color: rgb(216, 234, 243);
-}
-QLabel#info{
-    min-height: 600px;
-    font: 20px;
-}
 
-QLabel#enterfilepath{
-    min-width : 500px;
-}
 QPushButton{
     background-color: #D8EAF3;
     color: black;
@@ -24,27 +20,47 @@ QPushButton{
     border-style: outset ;
     border-width: 3px;
 }
-QWidget#MediaBar{
-    background-color: #D8EAF3;
-}
 
 QPushButton:hover{
     background-color: #B2D6E6;
 }
+
 QPushButton:pressed{
     border-color: #808080;
     background-color: #8DC1D8;
 }
 
+QLineEdit{
+    background-color: #B2D6E6;
+    border-color: #8DC1D8;
+    max-width: 500px;
+    min-width: 300px;
+    min-height: 40px;
+    color: darkgrey;
+    font: 20px;
+}
+
+QLineEdit:focus{
+    border: 2px solid #8DC1D8;
+}
+
+/* -------- Media Bar --------------*/
+
+QWidget#MediaBar{
+    background-color: #D8EAF3;
+    max-height: 100px;
+}
+
 QPushButton#playbtn, #forward, #backward{
     background-color: #D8EAF3;
-    border-radius: 22;
+    border-radius: 25;
     margin: 20px;
-    max-width: 40px;
-    max-height: 40px;
-    min-width: 40px;
-    min-height: 40px;
+    max-width: 50px;
+    max-height: 50px;
+    min-width: 50px;
+    min-height: 50px;
 }
+
 QPushButton#playbtn{
     image: url('playButton.png') ;
 }
@@ -56,20 +72,51 @@ QPushButton#forward{
 QPushButton#backward{
     image: url('backwardButton.png') ;
 }
+
+/* -------- Toolbar --------------*/
+
+QToolbar#Toolbar{
+    background-color: #D8EAF3;
+    border: none;
+    padding: 1px;
+    margin: 1px;
+}
+
+QPushButton#clear{
+    border-radius: 15;
+    max-height: 40px;
+    min-width: 60;
+}
+
+/* -------- Right Side --------------*/
+
+QWidget#right{
+    background-color: #D8EAF3;
+    border-color: #8DC1D8;
+    padding: 20 px;
+}
+
+QWidget#Data{
+    border: 2px solid #8DC1D8;
+    padding: 20 px;
+}
+
+QLabel#info{
+    font: 20px;
+}
+
+QLabel#enterfilepath{
+    min-width : 500px;
+    min-height: 60 px;
+}
+
+QLabel#error{
+    min-height : 40px;
+    color: #D8978D;
+}
+
 QPushButton#submit{
     border-radius: 15;
     max-height: 40px;
 }
 
-QLineEdit{
-    background-color: #D8EAF3;
-    max-width: 500px;
-    min-width: 300px;
-    min-height: 40px;
-    color: darkgrey;
-    font: 20px;
-}
-QFrame{
-    background-color: #808080
-
-}
