--- a/Stylesheet.qss
+++ b/Stylesheet.qss
@@ -9,15 +9,21 @@ light blue: #D8EAF3
 
 */
 /* -------- Stylesheet --------------*/
-QFrame{
+QWidget{
     background-color: #808080;
     color: #1A1A1A;
+    padding: 0px;
+    font-family: "Trebuchet MS";
+    font: 20px;
+}
+QFrame * {
+    margin: 0;
 }
 
 /* -------- General --------------*/
 QLabel{
     background-color: #D8EAF3;
-    font: 20px;
+
     min-height: 80px;
 
 }
@@ -42,7 +48,7 @@ QPushButton:pressed{
 
 QLineEdit{
     background-color: #B2D6E6;
-    border-color: #8DC1D8;
+    border: 2px solid #8DC1D8;
     max-width: 500px;
     min-width: 300px;
     min-height: 40px;
@@ -62,6 +68,8 @@ QComboBox{
     combobox-popup: 0;
     selection-background-color: #D8EAF3;
 }
+
+
 
 
 /* -------- Media Bar --------------*/
@@ -109,8 +117,10 @@ QToolBar *{
     padding: 5px;
     font: 20px;
 }
-
-QPushButton#clear{
+QWidget#spacer{
+    background: none;
+}
+QPushButton#clear, #ShowData{
     border-radius: 15;
     max-height: 20px;
     min-width: 70;
@@ -124,20 +134,26 @@ QComboBox::drop-down{
     width: 20px;
 }
 
+QComboBox:on{
+    background: #B2D6E6;
+    border-bottom: none;
+}
+
 QComboBox QAbstractItemView{
-    min-width: 320px;
-    height: 60px;
+    min-width: 330px;
+    min-height: 60px;
     border: none;
     background: #B2D6E6;
-    outline: none;
-}
-QComboBox:item{
-    padding: 5px;
-}
-QComboBox *{
-
     margin: 46 0 0 13;
+    selection-background-color: #999999;
     font 20px;
+    padding:0;
+}
+
+QComboBox QAbstractItemView::item {
+    color: red;
+    border: 3px solid red;
+
 }
 
 
@@ -164,12 +180,18 @@ QLabel#enterfilepath{
 }
 
 QLabel#error{
-    min-height : 40px;
+    min-height: 0;
     color: #D8978D;
+}
+QDockWidget::close-button{
+    subcontrol-position: right;
+    icon-size: 50px;
 }
 
 QPushButton#submit{
-    border-radius: 15;
+    border-radius: 18;
     max-height: 40px;
+    width: 100;
+    color: #1A1A1A;
 }
 
