--- a/Stylesheet.qss
+++ b/Stylesheet.qss
@@ -214,7 +214,22 @@ QPushButton#eraseMode, #moveMode, #clear, #DS{
 QWidget#right {
     background-color: #D8EAF3;
     border-color: #8DC1D8;
-    padding: 20 px;
+    padding: 100 px;
+}
+QTextEdit{
+    border: none;
+    min-height: 450px;
+    background-color: #D8EAF3;
+    font-family: "Trebuchet MS";
+    font: 29px;
+    padding: 20px;
+    color: #8DC1D8;
+}
+
+QFrame#userInput{
+    background-color: #D8EAF3;
+    border: 1px solid #8DC1D8;
+    margin: 0px;
 }
 
 QWidget#Data {
