--- a/Application/Stylesheet.qss
+++ b/Application/Stylesheet.qss
@@ -98,27 +98,27 @@ QPushButton#playbtn:hover, #forward:hover, #backward:hover, #fastforward:hover, 
 }
 
 QPushButton#playbtn {
-    image: url('Icons/Play.png');
+    image: url('Application/Icons/Play.png');
 }
 
 QPushButton#stopbtn {
-    image: url('Icons/Stop.png');
+    image: url('Application/Icons/Stop.png');
 }
 
 QPushButton#forward {
-    image: url('Icons/Forward.png');
+    image: url('Application/Icons/Forward.png');
 }
 
 QPushButton#fastforward {
-    image: url('Icons/FastForward.png');
+    image: url('Application/Icons/FastForward.png');
 }
 
 QPushButton#backward {
-    image: url('Icons/Backward.png');
+    image: url('Application/Icons/Backward.png');
 }
 
 QPushButton#fastbackward {
-    image: url('Icons/FastBackward.png');
+    image: url('Application/Icons/FastBackward.png');
 }
 
 /* -------- Toolbar --------------*/
@@ -186,10 +186,10 @@ QWidget#picturemenu *{
     color: #1A1A1A;
     max-height: 50 px;
 }
-QLabel#contrast{
-    min-height: 50px;
-    max-width: 80px;
+QLabel#contrast, #contrast_max{
     background: none;
+    min-height: 50px;
+    max-width: 50px;
     padding: 0px;
     margin: 0px;
 
@@ -255,22 +255,22 @@ QSlider::handle:horizontal:disabled {
     border-radius: 5px;
 }
 QPushButton#saveImage{
-    image: url('Icons/save.png');
+    image: url('Application/Icons/save.png');
 }
 QPushButton#eraseMode{
-    image: url('Icons/erase.png');
+    image: url('Application/Icons/erase.png');
 }
 
 QPushButton#moveMode{
-    image: url('Icons/move.png');
+    image: url('Application/Icons/move.png');
 }
 
 QPushButton#clear{
-    image: url('Icons/clear.png');
+    image: url('Application/Icons/clear.png');
 }
 
 QPushButton#DS{
-    image: url('Icons/visible.png');
+    image: url('Application/Icons/visible.png');
 }
 
 QPushButton#eraseMode, #moveMode, #clear, #DS, #saveImage{
