--- a/Application/Stylesheet.qss
+++ b/Application/Stylesheet.qss
@@ -62,14 +62,6 @@ QLineEdit:focus {
     border: 5px solid #8DC1D8;
 }
 
-QComboBox {
-    color: #1A1A1A;
-    background: #D8EAF3;
-    max-width: 260px;
-    height: 40px;
-    combobox-popup: 0;
-    selection-background-color: #D8EAF3;
-}
 
 /* -------- Media Bar --------------*/
 QWidget#MediaBar{
@@ -272,12 +264,32 @@ QPushButton#eraseMode:hover, #moveMode:hover, #clear:hover, #DS:hover, #saveImag
     background: rgba(89,89,89, 0.2);
 }
 
+/* -------- QComboBox --------------*/
+QComboBox {
+    border-radius:10;
+    color: #1A1A1A;
+    background: #D8EAF3;
+    max-width: 260px;
+    height: 40px;
+    combobox-popup: 0;
+    selection-background-color: #D8EAF3;
+    padding: 0 10 0 10;
+
+}
 
 QComboBox::drop-down {
-    subcontrol-origin: padding;
+    subcontrol-origin: content;
     subcontrol-position: right;
-    margin: 0;
     width: 20px;
+    border: none;
+    margin: 0,2,0,0;
+}
+
+QComboBox::down-arrow {
+    image: url('Application/Icons/downarrow.png');
+    min-width: 19px;
+    min-height: 19px;
+    background: none;
 }
 
 QComboBox:on {
@@ -287,18 +299,19 @@ QComboBox:on {
 
 QComboBox QAbstractItemView {
     min-width: 230px;
-    min-height: 70px;
+    min-height: 140px;
     border: none;
     background: #B2D6E6;
-    margin: 0 0 0 200;
+    margin: 0 0 0 8;
     selection-background-color: #999999;
-    font 20px;
+    font: 20px;
     padding: 0;
 }
 
 QComboBox QAbstractItemView::item {
     color: red;
     border: 3px solid red;
+    min-height: 50px;
 }
 
 /* -------- Right Side --------------*/
